--- a/site/styles/content_mobile.less
+++ b/site/styles/content_mobile.less
@@ -7,9 +7,9 @@
  */
 
 /*
- * Header march
+ * Header march & july
 */
-section#header.march {
+section#header {
 	margin-top: 85px;
 	padding: 0 calc(~'(100% - 1200px)' / 2);
 	background-image: url(../images/mobile_header.jpg);
@@ -21,7 +21,24 @@ section#header.march {
 	position: relative;
 }
 
-section#header.march article {
+section#header.july {
+	min-height: 55vh;
+
+	h1 {
+		font-size: 1.5rem;
+	}
+
+	span.arrow {
+		bottom: 0.4em;
+
+		svg {
+			width: 3rem;
+			height: 3rem;
+		}
+	}
+}
+
+section#header article {
 	width: 90vw;
 	margin: 0 auto;
 	background-color: fade(white, 90%);
@@ -31,21 +48,21 @@ section#header.march article {
 	padding: 0.5em;
 }
 
-section#header.march article h1 {
+section#header article h1 {
 	font-size: 2rem;
 	margin: 0;
 	padding-bottom: 1em;
 }
 
 
-section#header.march article p {
+section#header article p {
 	font-size: 1.3em;
 	margin: 0;
 	line-height: 1;
 	font-weight: 700;
 }
 
-section#header.march svg {
+section#header span.arrow {
 	position: absolute;
 	bottom: 2em;
 	left: 50%;
@@ -56,6 +73,12 @@ section#header.march svg {
 
 	border-radius: 100%;
 	box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.1);
+
+	svg {
+		display: block;
+		width: 3rem;
+		height: 3rem;
+	}
 }
 
 /*
